--- a/StickerCollector/Info.plist
+++ b/StickerCollector/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Greendurance requests access to your camera so that you can capture your sticker&apos;s image</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Greendurance requests access to your photo library so that you don&apos;t have to take a new picture</string>
 	<key>CFBundleDevelopmentRegion</key>
